k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: default
spec:
  selector:
    name: hello-world-deployment
  ports:
    - port: 8080
      targetPort: 8080
