k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - eaksy.com
      secretName: eaksy-com-tls
  rules:
    - host: eaksy.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world-service
                port:
                  number: 8080
